--- a/style.css
+++ b/style.css
@@ -314,3 +314,40 @@ header h1 {
 .botao-link:hover {
   background-color: #503282;
 }
+
+body {
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      background: url('background.jpg') no-repeat center center fixed;
+      background-size: cover;
+      padding: 20px;
+      max-width: 800px;
+      margin: auto;
+      color: #ffffff;
+      line-height: 1.6;
+    }
+    h2 {
+      text-align: center;
+    }
+    label {
+      display: block;
+      margin-top: 10px;
+    }
+    input, select, textarea, button {
+      width: 100%;
+      padding: 8px;
+      margin-top: 5px;
+    }
+    #imagemPokemon {
+      display: block;
+      margin: 10px auto;
+      width: 100px;
+      height: 100px;
+    }
+    #resultado {
+      margin-top: 20px;
+      padding: 15px;
+      background-color: #000000cc;
+      border-radius: 8px;
+      font-weight: bold;
+      white-space: pre-wrap;
+    }
