--- a/agenda.css
+++ b/agenda.css
@@ -387,3 +387,17 @@ body {
       margin-right: 0;
     }
 }
+
+    .agenda-voltar {
+      display: inline-block;
+      margin-top: 20px;
+      color: #ff7500;
+      text-decoration: none;
+      font-weight: 600;
+      font-size: 1rem;
+    }
+    
+    .agenda-voltar:hover {
+      text-decoration: underline;
+      color: #ffad00;
+    }
