--- a/style.css
+++ b/style.css
@@ -642,3 +642,18 @@ html {
   transform: scale(1.05);
   opacity: 0.9;
 }
+
+.btn-login-topo {
+  display: inline-block;
+  padding: 6px 12px;
+  font-size: 14px;
+  background-color: #ff7500;
+  color: rgb(255, 255, 255);
+  border-radius: 4px;
+  text-decoration: none;
+  transition: background-color 0.3s ease;
+}
+
+.btn-login-topo:hover {
+  background-color: #ffad00;
+}
